# scoring_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/scoring_project/: defaut2000.csv  extensions.py  scoring.do  scoring.py  scoring.sas  train_scoring.py  translate.r
