[project]
name = "scoring-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juliette", email = "juliette.bornier.3110@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly-express>=0.4.1",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]

[project.scripts]
scoring-project = "scoring_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scoring_project"]

